# intel-ipmi-oem

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  MAINTAINERS  OWNERS  README.md  cmake-format.json  generate-allowlist.py  groups  ipmi-allowlist.conf  ipmi-whitelist.conf  meson.build  meson.options  meson_options.txt  project.config
cmake/: CodeCoverage.cmake
docs/: Intel_IPMI_Platform_Events.md
include/: ImageUpdate.hpp  appcommands.hpp  biosconfigcommands.hpp  biosxml.hpp  bridgingcommands.hpp  commandutils.hpp  firmware-update.hpp  fruutils.hpp  globalcommands.hpp  ipmi_to_redfish_hooks.hpp  manufacturingcommands.hpp  me_to_redfish_hooks.hpp  multinodecommands.hpp  oemcommands.hpp  oobcommands.hpp  sdrutils.hpp  sensorcommands.hpp  sensorutils.hpp  smbioshandler.hpp  smbiosmdrv2.hpp  smbiosmdrv2handler.hpp  spiDev.hpp  storagecommands.hpp  types.hpp  variantvisitors.hpp
non-yocto/phosphor-logging/: elog-errors.hpp
non-yocto/sdbusplus/: bus.hpp  server.hpp
non-yocto/xyz/openbmc_project/Common/: error.hpp
non-yocto/xyz/openbmc_project/Logging/Entry/: server.hpp
non-yocto/xyz/openbmc_project/Smbios/MDR_V2/: error.hpp
src/: ImageUpdate.cpp  allowlist-filter.cpp  appcommands.cpp  biosconfigcommands.cpp  bmccontrolservices.cpp  bridgingcommands.cpp  chassiscommands.cpp  firmware-update.cpp  fruutils.cpp  globalcommands.cpp  ipmi_to_redfish_hooks.cpp  manufacturingcommands.cpp  me_to_redfish_hooks.cpp  multinodecommands.cpp  oemcommands.cpp  oobcommands.cpp  sensorcommands.cpp  sensorutils.cpp  smbioshandler.cpp  smbiosmdrv2.cpp  smbiosmdrv2handler.cpp  storagecommands.cpp  utils.cpp  whitelist-filter.cpp
tests/: meson.build  test_sensorcommands.cpp
